# nomad-pyteam-backend

./: .gitignore  README.md  manage.py  pyproject.toml
data_auth/: admin.py  apps.py
data_auth/migrations/: 0001_initial.py
pyteam_backend/: asgi.py  settings.py  urls.py  wsgi.py
service_api/: apps.py
service_api/auth/: responses.py  urls.py  views.py
